[gd_scene load_steps=2 format=3 uid="uid://cj8fmx5rvy3hy"]

[ext_resource type="Script" path="res://scripts/options_screen.gd" id="1_1"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeOption" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume: 50%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenOption" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fullscreen: OFF"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackOption" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Use LEFT/RIGHT to adjust"
horizontal_alignment = 1
vertical_alignment = 1
